# CS-170-Project-1

./: .gitignore  8PuzzleAIAlgorithm.c++  CMakeLists.txt  README.md
Headers/: Puzzle.hpp  Solver.hpp
Scripts/: 8PuzzleAIAlgorithm.c++  8PuzzleAIAlgorithm.cpp
lib/: Puzzle.cpp  Solver.cpp  main.cpp
